Added Propiedad Model, repo and mapper. migration created

--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -9,3 +9,7 @@
 @using Microsoft.JSInterop
 @using PropiedadesBlazor
 @using PropiedadesBlazor.Components
+
+@using Blazored.Toast
+@using Blazored.Toast.Services
+@using CurrieTechnologies.Razor.SweetAlert2
