--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -19,7 +19,7 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
+            <NavLink class="nav-link" href="categorias">
                 <i class="bi bi-bookmark-plus-fill"></i> Categorias
             </NavLink>
         </div>
