--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -25,8 +25,14 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="propiedades">
+                <i class="bi bi-bookmark-plus-fill"></i> Propiedades
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="auth">
-                <span class="bi bi-lock-nav-menu" aria-hidden="true"></span> Auth Required
+                <span class="bi bi-house-gear-fill" aria-hidden="true"></span> Auth Required
             </NavLink>
         </div>
 
